--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,12 +56,14 @@
 
     <TextView
         android:id="@+id/result"
-        android:layout_width="358dp"
-        android:layout_height="260dp"
-        android:layout_marginTop="290dp"
+        android:layout_width="294dp"
+        android:layout_height="188dp"
+        android:layout_marginTop="350dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:textStyle="bold|italic"
+        android:textColor="#070707"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,8 +77,7 @@
         android:ems="10"
         android:hint="Enter  The City"
         android:inputType="text"
-        android:textColorHint="#070707"
-        android:textStyle="bold"
+        android:textColorHint="#9C27B0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/value" />
 </androidx.constraintlayout.widget.ConstraintLayout>
